<resources>
    <string name="app_name">TweetMiw</string>

    <string name="action_settings">Configuración</string>
    <string name="login">Login</string>
    <string name="title_activity_initial">InitialActivity</string>
    <string name="tweets_pendientes">Tweets Pendientes</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="ayuda">¿Necesitas ayuda?</string>
    <string name="lista">lista</string>
    <string name="timeline">Timeline</string>
    <string name="search">Buscar</string>


    <string name="description_close">Botón de cerrar</string>
    <string name="description_photo">Botón para insertar una foto</string>
    <string name="description_responder">Botón para responder un tuit</string>
    <string name="description_retuitear">Botón para retuitear</string>
    <string name="description_favorito">Botón para marcar el tuit como favorito</string>
    <string name="description_avatar">Imagen del avatar del usuario</string>
    <string name="description_seguir">Imagen para seguir a otro usuario</string>
    <string name="description_logo">Imagen del logo de la aplicación</string>
    <string name="description_escribir">Botón para escribir un Tuit</string>


    <string name="msg_yes">Sí</string>
    <string name="msg_no">No</string>
    <string name="msg_recommendation">¿Nos recomendarías?</string>
    <string name="msg_front_desk">¿cómo consideras el servicio de la recepción?</string>
    <string name="msg_front_desk_0">Malo</string>
    <string name="msg_front_desk_100">Bueno</string>
    <string name="dialog_title">¿Desea enviar los datos?</string>
    <string name="title_tab_list">Listado</string>
    <string name="title_tab_grid">Vista</string>
    <string name="title_activity_main">Principal</string>
    <string name="list_separator_standard">Estándar</string>
    <string name="list_separator_luxury">De lujo</string>
    <string name="twittear">Twittear</string>
    <string name="hint_twittear">¿Qué está pasando?</string>


<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_loading">cargando</string>
    <string name="label_tweets_not_found">Tuits no encontrados. Compruebe su conexión a internet.</string>
    <string name="label_tweets_downloaded">Tuits descargados</string>
    <string name="label_login_noAuth">Login No Autorizado. Compruebe su conexión a internet.</string>
    <string name="label_tweet_published">Tweet publicado</string>
    <string name="label_tweet_Nopublished">Error publicando el Tweet. Compruebe su coneción a internet.</string>
    <string name="label_tweet_followers">Siguiendo</string>
    <string name="label_tweet_following">Seguidores</string>
    <string name="tab1">Tweets</string>
    <string name="tab2">Seguidores</string>
    <string name="tab3">Mi perfil</string>
</resources>
