<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    >

    <!-- <ImageView
        android:id="@+id/avatar_usuario"
        android:src="@drawable/avatar"
        android:contentDescription="@string/description_avatar"
        android:scaleType="centerCrop"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="50dp"
        android:layout_height="50dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"> -->


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/username"
                android:layout_alignParentTop="true"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/screenName"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/username"
                android:layout_toRightOf="@+id/username"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="15sp"
                android:id="@+id/tweets"
                android:layout_alignLeft="@+id/username"
                android:layout_alignStart="@+id/username"
                android:layout_below="@+id/screenName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/hora"
                android:layout_below="@+id/tweets"
                android:layout_marginTop="5dp"
                android:layout_alignStart="@+id/username"
                android:layout_alignLeft="@+id/username" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ic_undo_24dp"
                android:layout_below="@+id/hora"
                android:contentDescription="@string/description_responder"
                android:layout_marginTop="5dp"
                android:layout_alignLeft="@+id/username"
                android:layout_alignStart="@+id/username"
                android:src="@mipmap/ic_undo_24dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/retweet"
                android:layout_below="@+id/hora"
                android:contentDescription="@string/description_retuitear"
                android:layout_marginTop="5dp"
                android:src="@mipmap/ic_swap_horiz_24dp"
                android:layout_centerHorizontal="true"
                 />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ic_star_rate"
                android:layout_below="@+id/hora"
                android:contentDescription="@string/description_favorito"
                android:layout_marginTop="5dp"
                android:src="@mipmap/ic_star_rate_24dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

        <RelativeLayout
            android:layout_height="1dp"
            android:layout_width="fill_parent"
            android:layout_below="@+id/ic_star_rate"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_line" />

    </RelativeLayout>
